# coinstack

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CoinStack_Design_System-v2.md  CoinStack_Development_Guide-updates.md  CoinStack_Unified_Spec.md  CoinStack_auction_API.md  Cvibecodecoinstackopenapi_temp.json  DESIGN_SYSTEM_V3_CHANGELOG.md  DOCUMENTATION_RULES.md  GEMINI.md  README.md  backup.ps1  coinstack_list_view.html  coinstack_unified_colors.html  commit_design.txt  commit_ds.txt  commit_msg.txt  commit_ui.txt  docker-compose.yml  migrate.ps1  old_sidebar.tsx  restart.ps1  restart_err.txt  restart_log.txt  run-backup.bat  run_dev.ps1  test_auctions.py  test_collection_views.py  test_heritage_campaign.json  test_table_sort.py  verify_sidebar_data.py
backend/: .env.example  .gitignore  Dockerfile  ENUM_FIELD_REFERENCE.md  NGC_IMPORT_NOTES.md  README.md  SCHEMA.md  add_auto_merge_tables.py  analyze_excel.py  analyze_other_refs.py  analyze_text_issues.py  check_coson_v2.py  check_enrichment.py  check_migration.py  check_missing_refs.py  check_others_v2.py  check_tables.py  compare_databases.py  create_dirs.sh  debug_parser.py  experiment_crro.py  fetch_catalog_demo.py  import_debug_data.json  inspect_excel.py  migrate_all.py  migrate_db.py  process_other_venues.py  pyproject.toml  quick_test_import.py  reproduce_issue.py  run_enrichment_campaign.py  run_server.py  server_log.txt  simulate_user.py  test_connection.py  test_countermarks.py  test_ebay_direct.py  test_import_endpoint.py  test_ngc_import.py  test_normalize.py  (+6 more)
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/config/: llm_config.yaml
backend/scripts/: check_reference_integrity.py  cleanup_db.py  create_enrichment_jobs_table.sql  fix_fts.py  normalize_grades_in_db.py  process_logos.py  run_create_enrichment_jobs.py  test_ocre.py  verify_research_extensions.py
backend/tests/: conftest.py
backend/v1_archive/: IMPLEMENTATION.md  PARSING.md  add_campaign_columns.py  add_scraper_metadata_columns.py  check_all_refs.py  check_coson.py  count_data.py  (+23 more)
(+726 files in other folders)
