[project]
name = "coinstack-backend"
version = "0.1.0"
description = "CoinStack backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "playwright-stealth>=1.0.6",
    # LLM Integration
    "litellm>=1.52.0",
    "pyyaml>=6.0.1",
    "sse-starlette>=1.6.0",
    "imagehash>=4.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "unit: Fast tests that verify logic in isolation (no DB, no I/O)",
    "integration: Slow tests that verify infrastructure/DB interactions",
    "asyncio: mark a test as an asyncio test",
]
pythonpath = [
    "src"
]
